# stock-market-analysis

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  QUICK_START.md  README.md  buildspec.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  terraform-validate.yml
.kiro/specs/aws-devops-pipeline/: design.md  requirements.md  tasks.md
.kiro/specs/stock-market-dashboard/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
config/: .env.example
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  ENHANCEMENT_ROADMAP.md  README.md
scripts/: run.sh  validate_structure.py
src/: app.py  config.py
src/core/: data_processor.py  technical_indicators.py
src/managers/: refresh_manager.py  watchlist_manager.py
src/services/: __init__.py  api_service.py  demo_data.py
src/ui/: charts.py  components.py
terraform/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/environments/: dev.tfvars  prod.tfvars  staging.tfvars
terraform/modules/alb/: main.tf  outputs.tf  variables.tf
terraform/modules/codebuild/: main.tf  outputs.tf  variables.tf
terraform/modules/codepipeline/: main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
tests/: test_api_service.py  test_managers.py  test_technical_indicators.py
(+6 files in other folders)
